--- a/indexMedia.html
+++ b/indexMedia.html
@@ -33,9 +33,14 @@
             <input type="text" id="nome">
             <label for="email">E-mail:</label>
             <input type="email" id="email">
-            <label for="senha">Senha:</label>
-            <input type="password" id="senha">
-            <input type="submit" value="OK" class="btn">
+            <label for="estado">Estado</label>
+            <select name="estado" id="estado">
+                <option value="0">Selecione um estado</option>
+                <option value="sp">São Paulo</option>
+                <option value="rj">Rio de janeiro</option>
+                <option value="mg">Minas Gerais</option>
+                <option value="es">Espirito Santo</option>
+            </select>
         </form>
     </main>
     <section class="sobre">
@@ -53,6 +58,10 @@
         </div>
         <div class="card">
             <div id="card3" ></div>
+            <p>Nulla vehicula finibus arcu nec euismod. Nunc ut mollis nibh, in eleifend leo. Praesent ut magna non arcu gravida aliquam sed in neque. Sed luctus eros nisl, vel ullamcorper justo gravida quis.</p>
+        </div>
+        <div class="card">
+            <div id="card4" ></div>
             <p>Nulla vehicula finibus arcu nec euismod. Nunc ut mollis nibh, in eleifend leo. Praesent ut magna non arcu gravida aliquam sed in neque. Sed luctus eros nisl, vel ullamcorper justo gravida quis.</p>
         </div>
     </section>
